[package]
name = "dala"
version = "0.2.0"
edition = "2021"
description = "Dalia is a light weight formula language."
license = "MIT"
repository = "https://github.com/komyg/dala"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.0"
pest_derive = "2.7.0"
